--- a/PoloniexApi.DotNetCore/PoloniexApi.DotNetCore.csproj
+++ b/PoloniexApi.DotNetCore/PoloniexApi.DotNetCore.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="WampSharp.Default" Version="1.2.7.45-beta" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
